<resources>
    <string name="app_name">男朋友配送</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="transition_head">head</string>
    <string name="transition_title">title</string>
    <string name="transition_desc">desc</string>

    <string name="new_order_tip">您有%d笔新订单，请及时配送！</string>
    <string name="click_receive">点击接单</string>

    <string name="title_exit">确定退出应用？</string>
    <string name="desc_exit">退出应用可能会无法接收新订单</string>
    <string name="brutality_exit">残忍退出</string>
    <string name="waiting_for_order">等待新订单</string>

    <string name="desc_background_run">后台运行中，为您接收新订单</string>

    <string name="action_settings">设置</string>
    <string name="action_msg">消息</string>

    <string name="refresh_order">刷新订单</string>

    <string name="hint_username">请输入用户名</string>e
    <string name="hint_password">请输入密码</string>

    <string name="action_menu_history_order">工作汇总</string>
    <string name="action_menu_daily_settle">每日结算</string>
    <string name="user_center">个人中心</string>
    <string name="cav_number">骑手编号：</string>
    <string name="cav_grade">骑手等级：</string>
    <string name="complete_orders">完成订单数：</string>
    <string name="merchant_phone">商家电话：</string>
    <string name="client_phone">顾客电话：</string>
    <string name="sign_out">退出登陆</string>
    <string name="switch_sign">切换登陆</string>
    <string name="order">订单</string>
    <string name="new_order">新订单</string>
    <string name="discount">优惠</string>
    <string name="subtotal">小计</string>
    <string name="servicefee">服务费</string>
    <string name="packaging">打包盒</string>
    <string name="actual_fee">实付</string>
    <string name="click_to_check">点击查看</string>

    <string name="sign_in_ing">登录中...</string>
    <string name="sign_in_fail">登录失败，稍后重试</string>
    <string name="sign_in_wrong_user">用户名密码错误</string>

    <string name="detail_list">明细</string>
    <string name="daily_distance">里程</string>
    <string name="daily_income">金额</string>
    <string name="income_online">在线支付</string>
    <string name="income_cash">现金支付</string>
    <string name="daily_order_count">订单</string>
    <string name="need_help">需要帮助？</string>

    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string-array name="history_order">
        <item>已完成</item>
        <item>异常订单</item>
    </string-array>

    <string-array name="index_order_list">
        <item>新订单</item>
        <item>待取餐</item>
        <item>配送中</item>
    </string-array>

    <string name="takeDish">取餐：</string>
    <string name="deliveryDish">配送：</string>
    <string name="contact_client">联系顾客</string>
    <string name="contact_merchant">联系商家</string>
    <string name="served">确认送达</string>
    <string name="receive_order">接单</string>
    <string name="taken_order">已取餐</string>
    <string name="complete_order">完成配送</string>
    <string name="ready_delivery">准备配送</string>
    <string name="vacant">无</string>

    <string name="tip_receive_order">您确认接单么？</string>
    <string name="btn_sure_take">确认接单</string>
    <string name="btn_not_sure">让我再想想</string>
    <string name="receiving_order">正在接单</string>
    <string name="receive_order_succeed">接单成功，赶紧去取餐吧</string>
    <string name="receive_order_failed">接单失败，再试试</string>

    <string name="tip_take_order">产品核对完毕，并开始配送？</string>
    <string name="btn_begin_deli">开始配送</string>
    <string name="btn_waiting">再等等</string>
    <string name="tip_doing_act">正在操作</string>
    <string name="take_order_succeed">取餐完成，开始配送吧</string>
    <string name="take_order_failed_by_distance">您距离商家很远，无法开始配送</string>
    <string name="take_order_failed">取餐失败，再试试吧</string>

    <string name="tip_complete_order">订单已送达，完成订单？</string>
    <string name="btn_complete_deli">配送完成</string>
    <string name="complete_order_succeed">配送完成</string>
    <string name="complete_order_failed_by_distance">您距离用户很远，无法完成订单</string>
    <string name="complete_order_failed_by_location_failed">定位失败，可以再试试（%d）</string>
    <string name="complete_order_failed">出问题了，再试试吧</string>
    <string name="fetching_location">正在获取当前位置，请稍后</string>

    <string name="wait_sure">待确认</string>
    <string name="wait_take">待取餐</string>
    <string name="delivering">配送中</string>
    <string name="order_completed">配送完成</string>
    <string name="order_exception">异常订单</string>
    <string name="order_unknown">未知订单</string>

    <string name="delivery_demand">配送要求：</string>
    <string name="delivery_expect">期望到达：</string>
    <string name="delivery_time">配送时效：</string>

    <string name="makeorder_pre">该用户第\u0020</string>
    <string name="makeorder_after">\u0020次下单</string>
    <string name="first_order">用户首单</string>

    <string name="order_remark">订单备注：</string>
    <string name="commodity_detail">商品详情：</string>
    <string name="mkorder_time">下单时间：</string>
    <string name="order_number">订单编号：</string>
    <string name="payment_mode">支付方式：</string>
    <string name="alipay">支付宝</string>
    <string name="wechat_pay">微信支付</string>
    <string name="cash_pay">线下支付</string>
    <string name="chinaums_pay">银联支付</string>
    <string name="complete_delivery">完成配送</string>
    <string name="loading_detail">正在加载详情数据</string>
    <string name="title_permission_request">权限申请</string>
    <string name="permission_necessary_tip">为了帮助您更好的使用本产品，希望您给予本产品申请的相关权限。</string>
    <string name="i_know">我知道了</string>
    <string name="tip_new_order">您有新的订单啦！</string>>
    <string name="usr_first_order">用户首单</string>

    <string name="prefix_rmb">￥%s</string>
    <string name="prefix_count">x%s</string>
    <string name="prefix_discount_rmb">-￥%s</string>
    <string name="suffix_count">%d单</string>
    <string name="order_count">下单%d次</string>
    <string name="suffix_makeorder">%s下单</string>
    <string name="prefix_orderNum">订单号%s</string>

    <!--    Test String Resource     -->
    <string name="tstUserName">欧阳正茂</string>
    <string name="tstPhone">135****9837</string>
    <string name="tstDistance">24.67KM</string>
    <string name="tstIncome">￥200</string>
    <string name="tstOrderCount">12单</string>

    <string name="suffix_km">%s千米</string>
    <string name="suffix_m">%s米</string>
    <string name="pre_pos">#%d</string>
</resources>
