<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                               xmlns:app="http://schemas.android.com/apk/res-auto"
                                               xmlns:tools="http://schemas.android.com/tools"
                                               android:layout_width="match_parent"
                                               android:layout_height="match_parent"
                                               android:background="@color/colorPrimary"
                                               android:paddingBottom="@dimen/txt_margin_large"
                                               android:paddingTop="@dimen/txt_margin_large"
                                               tools:context="com.bfdelivery.cavaliers.ui.activities.DailySettleActivity">

    <android.support.v4.widget.Space
        android:id="@+id/spaceWrapper"
        android:layout_width="match_parent"
        app:layout_heightPercent="10%"/>

    <RelativeLayout
        android:id="@+id/userInfoWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spaceWrapper"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/usrInfoWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.bfdelivery.cavaliers.ui.views.CircleImageView
                style="@style/NavHeadPotrait"
                android:layout_marginBottom="@dimen/txt_margin_large"
                android:src="@drawable/def_potriat"
                android:transitionName="@string/transition_head"/>

            <TextView
                style="@style/NavHeadTitle"
                android:layout_marginBottom="@dimen/txt_margin_mini"
                android:text="@string/tstUserName"
                android:transitionName="@string/transition_title"/>

            <TextView
                style="@style/NavHeadDetail"
                android:text="@string/tstPhone"
                android:transitionName="@string/transition_desc"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usrInfoWrapper"
            android:layout_marginTop="@dimen/daily_settle_detail_mgt"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/DailySettleDetailTitle"
                    android:text="@string/daily_order_count"/>

                <TextView
                    style="@style/DailySettleDetail"
                    android:text="@string/tstOrderCount"/>
            </LinearLayout>

            <View
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:background="@color/white"/>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    style="@style/DailySettleDetailTitle"
                    android:layout_gravity="center"
                    android:text="@string/daily_income"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/txt_margin_large"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            style="@style/DailySettleDetailTitle"
                            android:text="@string/income_online"/>

                        <TextView
                            style="@style/DailySettleDetail"
                            android:text="@string/tstIncome"/>
                    </LinearLayout>

                    <View
                        android:layout_width="2px"
                        android:layout_height="match_parent"
                        android:background="@color/white"/>

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            style="@style/DailySettleDetailTitle"
                            android:text="@string/income_cash"/>

                        <TextView
                            style="@style/DailySettleDetail"
                            android:text="@string/tstIncome"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</android.support.percent.PercentRelativeLayout>
