<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/txt_margin_mini"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:id="@+id/content_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/txt_margin_middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/txt_margin_small">


            <TextView
                android:id="@+id/txtOrderIndex"
                style="@style/OrderIndex"
                android:layout_marginRight="@dimen/txt_margin_small"
                android:text="#2"/>

            <TextView
                android:id="@+id/txtOrderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="还剩35分钟"
                android:textColor="@color/colorTxtAlert"
                android:textSize="@dimen/txt_size_small"/>
        </LinearLayout>


        <include layout="@layout/layout_horizontal_gap"/>

        <LinearLayout
            android:id="@+id/address_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/txt_margin_middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2KM"
                        android:textColor="@color/colorTxtPrimary"
                        android:textSize="@dimen/txt_size_big"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/takeDish"
                        android:textColor="@color/colorTxtDetail"
                        android:textSize="@dimen/txt_size_small"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="宝庆美食园(春晖店)"
                        android:textColor="@color/colorTxtDefault"
                        android:textSize="@dimen/txt_size_big"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="雨山区印山东路696号101室"
                        android:textColor="@color/colorTxtDetail"
                        android:textSize="@dimen/txt_size_small"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4KM"
                        android:textColor="@color/colorTxtPrimary"
                        android:textSize="@dimen/txt_size_big"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deliveryDish"
                        android:textColor="@color/colorTxtDetail"
                        android:textSize="@dimen/txt_size_small"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="雨山区慈湖河路690号附近"
                        android:textColor="@color/colorTxtDefault"
                        android:textSize="@dimen/txt_size_big"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="李女士"
                        android:textColor="@color/colorTxtDetail"
                        android:textSize="@dimen/txt_size_small"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/txt_margin_middle"
            android:background="@drawable/btn_tip_bkg"
            android:padding="@dimen/radius_default"
            android:text="500g"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_size_small"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_margin_middle"
            android:orientation="horizontal">

            <TextView
                style="@style/ButtonOrderItem"
                android:background="@drawable/slct_btn_default_bkg"
                android:text="@string/contact"
                android:textColor="@drawable/slct_default_txt_clr"/>

            <TextView
                style="@style/ButtonOrderItem"
                android:background="@drawable/slct_btn_primary_bkg"
                android:text="@string/served"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>